# Chess

./: CMakeLists.txt  Makefile  README.md
include/: Board.hpp  Location.hpp  Pieces.hpp  function.hpp
include/board/: Board.hpp  Board.hpp~
include/chess/: main.hpp  main.hpp~
include/pieces/: Location.hpp  Pieces.hpp
src/: Board.cpp  Pieces.cpp  function.cpp  main.cpp  main.cpp~
